refactor(ux/ui/refactoring): dark-theme fix / added missing icons
 * moved styles to it's relevant component-files
 * added some missing RI-icons
 * fixed 3 issues with wrong Vue-typing
 * started to decompose common components

*

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -274,7 +274,7 @@ button.-lg.-circle {
       color: $gray !important;
     }
 
-    .header
+    .header,
     .footer,
     .body {
       border-color: $light !important;
