--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -89,6 +89,9 @@ $biggestWidth: 1920px;
 $fontSizeXs: 10px;
 $fontSizeRegular: 14px;
 
+$mobileNormal: 13px;
+$mobileHeader: 16px;
+
 /* Shadow colors */
 $shadowColor3: #00000007; //rgba(0, 0, 0, .03);
 $shadowColor4: #0000000a; //rgba(0, 0, 0, .04);
