--- a/src/assets/style/_mobile-layout.scss
+++ b/src/assets/style/_mobile-layout.scss
@@ -43,7 +43,7 @@
     overflow-y: auto;
   }
   aside.bn-onboard-custom.bn-onboard-modal {
-    padding: 1rem;
+    padding: 1rem 1rem 3rem;
     align-items: flex-end;
 
     section.bn-onboard-custom.bn-onboard-modal-content {
@@ -54,6 +54,7 @@
       padding: 1rem;
       border-radius: 8px !important;
       height: fit-content !important;
+      max-height: 80vh !important;
     }
 
     header.bn-onboard-custom.bn-onboard-modal-content-header {
