--- a/src/assets/style/pages/_tokenAccount.scss
+++ b/src/assets/style/pages/_tokenAccount.scss
@@ -17,26 +17,29 @@
   .transactionsTile {
     min-height: 250px !important;
   }
-
-  @media screen and (max-width: $mobile) {
-    .balance, .balancePrice {
-      font-size: $fontSizeRegular;
-
-
-
-    }
-  }
 }
 
-@media screen and (max-width: $mobile) {
-  .balance, .balancePrice {
-    font-size: $fontSizeRegular;
-  }
-  .balanceWithdraw {
+.balanceWithdraw {
+
+  @media (max-width: $mobile) {
     flex-direction: column;
 
     & > .infoBlock {
       margin-bottom: 10px;
+      .headline
+      {
+        margin-top: 0 !important;
+        font-size: 12px;
+        color: $gray;
+      }
+      .balancePrice
+      {
+        font-size: $mobileNormal;
+      }
+      .balance
+      {
+        font-size: $mobileHeader;
+      }
     }
   }
 }
