--- a/src/assets/style/blocks/_commonPageWrapper.scss
+++ b/src/assets/style/blocks/_commonPageWrapper.scss
@@ -1,4 +1,4 @@
-.dappPageWrapper, .indexLayout .routerContainer .dappPageWrapper {
+.dappPageWrapper, .dappModalWindowWrapper, .indexLayout .routerContainer .dappPageWrapper {
 
   & > * {
     margin: 1rem 0;
@@ -22,6 +22,7 @@
     }
 
     .tileHeadline {
+      gap: 0.5rem;
       justify-content: center;
       width: 100%;
       margin: 0;
@@ -49,10 +50,10 @@
 
           .returnBtn {
             i, .ov-icon {
-              width: 30px;
-              height: 30px;
+              width: 25px;
+              height: 25px;
               font-size: 16px;
-              line-height: 30px;
+              line-height: 25px;
             }
           }
         }
@@ -66,10 +67,6 @@
         cursor: pointer;
         opacity: 0.9;
         transition: background-color $transition1;
-
-        &:hover {
-          background: transparentize($color: $gray, $amount: 0.5);
-        }
       }
 
       .returnBtn {
@@ -108,14 +105,13 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin-left: 0.75rem;
     height: 2rem;
     width: 2rem;
     border: 0;
+    transition: $tempTransparent;
 
     &:hover {
-      box-shadow: $hoverShadow;
-      transition: $tempTransparent;
+      box-shadow: $tileShadow;
     }
 
     & > svg.ov-icon {
@@ -178,7 +174,31 @@
   }
 }
 
+.dappPageWrapper {
+  padding: 1rem 0 0;
+}
 @media (max-width: $mobile) {
+
+  section.layout-content.layoutContent {
+    display: flex;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    .routerContainer {
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+      padding: 0;
+      .dappPageWrapper {
+        padding: 1rem 0;
+        overflow-x: hidden;
+      }
+    }
+  }
+
+
+
+
 
   ._icon-wrapped {
     &.rounded {
@@ -186,6 +206,38 @@
     }
   }
 
+  button.button {
+    font-size: 16px !important;
+
+    &.-lg {
+      &.-block {
+        padding: 0.3rem 0 !important;
+        margin: 0.5rem 0 1rem !important;
+
+        &.-secondary {
+          padding: 0.3rem 0 !important;
+          font-size: 16px !important;
+
+
+        }
+      }
+
+      &.-link {
+        margin: 0.2rem !important;
+      }
+
+    }
+
+
+  }
+
+  .form-input-group {
+    margin-bottom: 0.5rem;
+
+    .form-input input {
+      font-size: 12px !important;
+    }
+  }
 
   .dappPageWrapper {
     .tileBlock {
@@ -247,41 +299,8 @@
         overflow-x: hidden;
       }
 
-      button.button {
-        font-size: 16px !important;
-
-        &.-lg {
-          &.-block {
-            padding: 0.3rem 0 !important;
-            margin: 0.5rem 0 1rem !important;
-
-            &.-secondary {
-              padding: 0.3rem 0 !important;
-              font-size: 16px !important;
-
-
-            }
-          }
-
-          &.-link {
-            margin: 0.2rem !important;
-          }
-
-        }
-
-
-      }
-
-      .form-input-group {
-        margin-bottom: 0.5rem;
-
-        .form-input input {
-          font-size: 12px !important;
-        }
-      }
-
       .animatedCheckmark {
-        max-height: 5rem;
+        //max-height: 5rem;
       }
 
       & > * {
@@ -298,9 +317,10 @@
         padding-bottom: 0.5rem !important;
 
         i {
-          line-height: 20px;
-          height: 20px;
-          width: 20px;
+
+          height: min-content;
+          width: min-content;
+          line-height: 100%;
 
         }
       }
@@ -328,7 +348,7 @@
 
 
 .inkline.-dark {
-  .dappPageWrapper {
+  .dappPageWrapper, .dappModalWindowWrapper {
     .transactionsListContainer, .contactsListContainer, .tokenListContainer, .balancesList {
       margin: 1.5rem 0;
       border-radius: $borderRadius !important;
