--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -4,6 +4,7 @@ footer.layout-footer {
   height: 3.5rem;
   align-content: center;
   padding: 0 1rem 0.5rem !important;
+  z-index: 3;
 
   img {
     -webkit-user-select: none;
@@ -32,6 +33,8 @@ footer.layout-footer {
 
   &.mainFooter {
     width: 100%;
+    bottom: 0 !important;
+    position: fixed;
 
     .row {
       font-size: $fontSizeRegular !important;
