--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -4,7 +4,7 @@
 
   .routerContainer {
     min-height: $minRouteHeightMain;
-    margin: 1rem auto;
+    //margin: 1rem auto;
     width: 100%;
   }
 
