--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -28,7 +28,7 @@
   }
 
   @media (min-width: $mobile) {
-    background-color: transparent !important;
+    //background-color: transparentize($color: $violet, $amount: 0.9) !important;
 
     .bn-onboard-modal-content {
       width: 85%;
@@ -97,7 +97,6 @@
 
   ul.bn-onboard-modal-select-wallets {
     max-height: 50vh !important;
-    overflow: auto;
   }
 
   .bn-onboard-custom.bn-onboard-select-wallet-definition {
@@ -318,7 +317,6 @@ aside.bn-onboard-custom.bn-onboard-modal {
 @media (max-height: $mobile) {
   aside.bn-onboard-custom.bn-onboard-modal {
     padding: 1rem;
-    align-items: flex-end;
 
     section.bn-onboard-custom.bn-onboard-modal-content {
       display: flex;
@@ -336,7 +334,7 @@ aside.bn-onboard-custom.bn-onboard-modal {
 
     button.bn-onboard-custom.bn-onboard-icon-button {
       margin: 0 0 .25rem !important;
-      padding: 0.25rem !important;
+      padding: 0.5rem !important;
     }
   }
 }
