--- a/src/assets/style/blocks/_chooseToken.scss
+++ b/src/assets/style/blocks/_chooseToken.scss
@@ -76,6 +76,9 @@
       border-bottom: 1px solid;
       cursor: pointer;
       transition: background-color $transition1;
+      &:last-child {
+        border-bottom: none;
+      }
 
       @media screen and (max-width: $mobile) {
         height: 74px !important;
@@ -127,10 +130,6 @@ body.inkline {
 
       .tokenItem {
         border-color: $input-border-color-light;
-      }
-    }
-    .searchContainer {
-      .updateBtn {
       }
     }
   }
