--- a/src/assets/style/components/custom/_input.scss
+++ b/src/assets/style/components/custom/_input.scss
@@ -116,9 +116,9 @@
   }
 }
 
-.ri-loader-5-line {
+.spin-animation, .ri-loader-5-line {
   display: inline-block;
-  animation: spin.5s linear 0s infinite;
+  animation: spin 0.5s linear 0s infinite;
 }
 
 @keyframes spin {
