--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -11,24 +11,6 @@
   .transactionsListContainer {
     height: 100%;
     max-height: 60vh;
-    overflow: auto;
-    border-radius: $borderRadiusSm !important;
-    box-shadow: $shadowInset;
-
-    &::-webkit-scrollbar {
-      width: 10px;
-      background-color: $tempTransparent;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      border-radius: $borderRadius;
-      cursor: pointer;
-    }
-
-    &::-webkit-scrollbar-track {
-      background-color: $tempTransparent;
-      border-radius: $borderRadius;
-    }
 
     .transactionItem {
       display: grid;
@@ -40,6 +22,15 @@
       height: 90px;
       padding: 0 15px;
       border-bottom: 1px solid;
+      transition: border-color $transition1;
+
+      .amount, .tokenSymbol {
+        display: inline-flex;
+      }
+
+      &:last-child {
+        border-bottom: none;
+      }
 
       &:hover {
         background-color: transparentize($color: $gray, $amount: 0.9);
@@ -116,14 +107,19 @@
 
           @media screen and (max-width: $mobile) {
             justify-content: center;
+
+            svg.modalOpenIcon {
+              top: 1px !important;
+              width: 15px;
+              height: 15px;
+            }
           }
 
-          em {
+          svg {
             margin-left: 5px;
-            font-size: 22px;
-            line-height: 22px;
-
             &.modalOpenIcon {
+              position: relative;
+              top: 2px;
               transition: filter $transition1;
               cursor: pointer;
 
@@ -287,10 +283,15 @@
             margin-top: 0;
             width: auto !important;
             text-align: left !important;
-            font-size: 12px !important;
+            font-size: 10px !important;
             align-self: flex-start;
             white-space: nowrap;
             justify-self: flex-start;
+
+            svg {
+              width: 12px;
+              height: 12px;
+            }
           }
         }
 
@@ -316,11 +317,6 @@ body.inkline {
 
       .transactionItem {
         border-color: $input-border-color-light;
-
-        .amount,
-        .tokenSymbol {
-          display: inline-flex;
-        }
       }
     }
   }
