--- a/src/assets/style/components/_checkmark.scss
+++ b/src/assets/style/components/_checkmark.scss
@@ -4,9 +4,8 @@
   height: max-content;
   margin: 0 auto;
   text-align: center;
-  svg
-  {
-    width: 150px;
-    height: 150px;
+  svg {
+    width: 150px !important;
+    height: 150px !important;
   }
 }
