--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -69,10 +69,6 @@
           transition: $transition1;
           transition-property: background-color, color;
 
-          &:last-child {
-            border-bottom: none;
-          }
-
           &:hover {
             background-color: transparentize($color: $gray, $amount: 0.9);
           }
@@ -214,6 +210,10 @@
         }
       }
     }
+  }
+
+  & > div {
+    margin-top: 0;
   }
 }
 
