--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -6,6 +6,11 @@
     padding-top: 20px;
     padding-bottom: 15px;
     text-align: center;
+
+    @media screen and (max-width: $mobile) {
+      margin-bottom: 0;
+      margin-top: 0;
+    }
   }
 
   .transactionsListContainer {
@@ -22,14 +27,11 @@
       height: 90px;
       padding: 0 15px;
       border-bottom: 1px solid;
-      transition: border-color $transition1;
+      transition: $transition1;
+      transition-property: background-color, border-color;
 
       .amount, .tokenSymbol {
         display: inline-flex;
-      }
-
-      &:last-child {
-        border-bottom: none;
       }
 
       &:hover {
@@ -194,16 +196,19 @@
         align-items: flex-start;
 
         .status {
-          text-align: left;
-          height: 100%;
-
-          margin-top: -.7rem;
+          position: relative;
+          top: -1px;
+          width: 18px;
+          height: 18px;
 
           .tooltip-wrapper {
-            em {
-              width: 2rem;
-              height: 2rem;
-              font-size: 18px;
+            height: 100%;
+            width: 100%;
+            
+            svg {
+              display: block;
+              width: 100%;
+              height: 100%;
             }
           }
         }
@@ -295,13 +300,19 @@
           }
         }
 
-        .button {
+        .externalLink {
           position: absolute;
-          left: 0;
-          bottom: -0.1rem;
+          left: 0.4rem;
+          top: 1.15rem;
           padding: 0 !important;
           justify-self: center;
-          width: 2rem;
+          width: 1.3rem;
+          height: 1.3rem;
+
+          svg {
+            top: -2.5px;
+            left: 0;
+          }
         }
       }
     }
