Items border fix

--- a/src/assets/style/blocks/_commonPageWrapper.scss
+++ b/src/assets/style/blocks/_commonPageWrapper.scss
@@ -252,7 +252,7 @@
           padding: 0.3rem 0.5rem !important;
 
           &:last-child {
-            border-bottom-width: 0 !important;
+            border-bottom: none !important;
           }
         }
       }
