--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -201,7 +201,7 @@ body.inkline {
 
 button.-lg.-circle {
   .inkline-icon {
-    line-height: 2;
+    line-height: 1.9;
   }
 }
 
@@ -575,6 +575,9 @@ button.-lg.-circle {
 
 ._margin-top-05 {
   margin-top: 0.5em;
+}
+._margin-left-05 {
+  margin-left: 0.4em;
 }
 
 .grid-cols-2 {
