--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -57,6 +57,7 @@
 
         .inProgress {
           color: $gray;
+          animation: spin 0.5s linear 0s infinite;
         }
 
         .rejected {
