--- a/src/assets/style/_mobile-layout.scss
+++ b/src/assets/style/_mobile-layout.scss
@@ -127,12 +127,10 @@ section.layoutContent {
   }
 
   .footerModalContainer {
-
     .footer {
       position: relative;
 
       button.floating-on-mobile {
-
         position: absolute;
         right: 0.8rem;
         bottom: 0.5rem;
@@ -142,13 +140,33 @@ section.layoutContent {
       }
     }
   }
-  .walletPage .balancesBlock .balances .balancesList .balanceItem .rightSide .rowItem:nth-child(2) {
-    justify-content: flex-end;
-
-    .total {
-      font-family: $firaSans;
-      letter-spacing: 0;
-      font-size: 10px;
+  .walletPage .balancesBlock .balances .balancesList .balanceItem {
+    .leftSide {
+      .status {
+        position: relative;
+        top: 1.5px;
+      }
+    }
+    .rightSide .rowItem {
+      justify-content: flex-end;
+  
+      &:nth-child(2) {
+        .total {
+          font-family: $firaSans;
+          letter-spacing: 0;
+          font-size: 10px;
+        }
+        .status {
+          position: relative;
+          top: 0.25rem;
+          margin-right: 0.5rem;
+  
+          &, .loaderContainer, .loaderContainer .loaderSpinner {
+            width: 1rem;
+            height: 1rem;
+          }
+        }
+      }
     }
   }
   .chooseTokenBlock {
