--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -33,10 +33,12 @@ body {
     .column {
       display: flex;
       align-items: center;
+      height: 100%;
     }
 
     .headerWrapper {
       padding-top: 0 !important;
+      height: 100%;
 
       .projectLogo {
         width: auto;
@@ -168,7 +170,7 @@ body {
 
         .container.mobileOnly {
           margin: 0 auto !important;
-          padding-left: 12px;
+          padding-left: 0;
           padding-right: 0;
         }
 
