refactor(ui): Contacts listing decorations removed

--- a/src/assets/style/pages/_contacts.scss
+++ b/src/assets/style/pages/_contacts.scss
@@ -38,8 +38,8 @@
   height: 100%;
   margin-top: 1rem;
   overflow: auto;
-  border-radius: $borderRadius;
-  box-shadow: $shadowInset;
+  //border-radius: $borderRadius;
+  //box-shadow: $shadowInset;
 
   &::-webkit-scrollbar {
     width: 10px;
