NFT operations and support

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -57,7 +57,7 @@ main.layout.defaultLayout {
     }
 
     .tileBlock {
-      margin: 0 auto !important;
+      margin: 0 auto;
     }
 
     .balancesList {
