--- a/src/assets/style/pages/_tokenAccount.scss
+++ b/src/assets/style/pages/_tokenAccount.scss
@@ -3,9 +3,61 @@
     .headline {
       font-size: 16px;
     }
+    .hash {
+      font-size: 12px;
+    }
+    .address {
+      font-size: 14px;
+      padding-bottom: 4px;
+    }
+    .copyGrid {
+      display: grid;
+      grid-template-columns: 1fr max-content;
+      grid-template-rows: 100%;
+      grid-gap: 10px;
+      align-items: center;
+      &.addressCopy {
+        padding-bottom: 4.5px;
+        width: 95%;
+      }
 
+      .copyIcon {
+        display: flex;
+        align-items: center;
+        color: $gray;
+        cursor: pointer;
+        transition: color $transition1;
+        &:active {
+          transition-duration: 0.0001s;
+          color: $green !important;
+        }
+        
+        .iconContainer {
+          display: flex;
+          align-items: center;
+          
+          svg {
+            position: relative;
+            top: -0.5px;
+            height: 20px;
+            width: auto;
+            overflow: visible;
+            margin-right: 4px;
+          }
+        }
+      }
+    }
+    .hash,.address {
+      display: block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
     .balance {
       font-size: 20px;
+      display: flex;
+      height: 100%;
+      align-items: flex-end;
 
       .balancePrice {
         color: $gray;
@@ -39,6 +91,25 @@
       .balance
       {
         font-size: $mobileHeader;
+      }
+    }
+  }
+}
+
+
+body.inkline {
+  &.-light {
+    .tokenAccount .infoBlock {
+      .copyIcon:hover {
+        color: $black;
+      }
+    }
+  }
+
+  &.-dark {
+    .tokenAccount .infoBlock {
+      .copyIcon:hover {
+        color: $white;
       }
     }
   }
